--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <hr />
         <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project Preview">
-        <h3><a href="./birthday-invite/">Birthday Invite Project</a></h3>
+        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-invite.png" width="250">
         <h2>
             <a href="./public/about.html">About Me</a>  
